--- a/dotnet.yml
+++ b/dotnet.yml
@@ -16,7 +16,7 @@ steps:
     echo "##vso[task.setvariable variable=VERSION]$VERSION"
 
     echo "Cascade to:"
-    for item in ${CASCADE[*]}
+    for item in ${CASCADES[*]}
     do
       printf "  %s\n" $item
     done
