--- a/dotnet.yml
+++ b/dotnet.yml
@@ -1,58 +1,55 @@
-trigger:
-- master
-
-pool: Default
-#  vmImage: 'ubuntu-16.04'
-
-variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
+parameters:
   buildConfiguration: 'Release'
+  pool: Default
 
-steps:
-- bash: |
-    export VERSION=$(git tag --sort=-version:refname | head -1)
-    echo $BUILD_REASON $BUILD_SOURCEVERSION $VERSION
-    echo "##vso[task.setvariable variable=VERSION]$VERSION"
+jobs:
+- job: ${{ parameters.name }}
+  pool: ${{ pool }}
 
-    echo "Cascade to:"
-    for item in ${CASCADES[*]}
-    do
-      printf "  %s\n" $item
-    done
-  displayName: Set Version
+  steps:
+  - bash: |
+      export VERSION=$(git tag --sort=-version:refname | head -1)
+      echo $BUILD_REASON $BUILD_SOURCEVERSION $VERSION
+      echo "##vso[task.setvariable variable=VERSION]$VERSION"
 
-- script: |
-    echo The version is $(VERSION)
-  displayName: Show version
+      echo "Cascade to:"
+      for item in ${CASCADES[*]}
+      do
+        printf "  %s\n" $item
+      done
+    displayName: Set Version
 
-- checkout: self
-  submodules: recursive
+  - script: |
+      echo The version is $(VERSION)
+    displayName: Show version
 
-- task: DotNetCoreInstaller@0
-  inputs:
-    version: '2.2.203'
+  - checkout: self
+    submodules: recursive
 
-- task: DotNetCoreCLI@2
-  displayName: Restore packages
-  inputs:
-    command: 'restore'
-    feedsToUse: 'select'
-    versioningScheme: 'off'
+  - task: DotNetCoreInstaller@0
+    inputs:
+      version: '2.2.203'
 
-- task: DotNetCoreCLI@2
-  displayName: Build release
-  inputs:
-    command: build
-    projects: '**/*.csproj'
-    arguments: '--configuration $(buildConfiguration)' # Update this to match your need
-    
-- task: DotNetCoreCLI@2
-  displayName: Test
-  inputs:
-    command: test
-    projects: 'Specifications/**/*.csproj'
-    arguments: '--configuration $(buildConfiguration)'
+  - task: DotNetCoreCLI@2
+    displayName: Restore packages
+    inputs:
+      command: 'restore'
+      feedsToUse: 'select'
+      versioningScheme: 'off'
+
+  - task: DotNetCoreCLI@2
+    displayName: Build release
+    inputs:
+      command: build
+      projects: '**/*.csproj'
+      arguments: '--configuration ${{ buildConfiguration }}' # Update this to match your need
+      
+  - task: DotNetCoreCLI@2
+    displayName: Run Tests
+    inputs:
+      command: test
+      projects: 'Specifications/**/*.csproj'
+      arguments: '--configuration ${{ buildConfiguration }}'
     
   
 # echo PullRequest  49e27cc18f57870206171925a8c540abdac7bbfb 2.0.0
