--- a/Source/Documentation/documentation.yml
+++ b/Source/Documentation/documentation.yml
@@ -32,7 +32,8 @@ jobs:
         git checkout master && git pull
         cd ../../../..
         git add Source/repositories/
-        git config user.name "Dolittle Documentation"
+        git config --global user.email "documentation@dolittle.do
+        git config --global user.name "Dolittle Documentation"
         git commit -m "Updating Documentation"
         git push https://dolittle-documentation:$(PAT)@github.com/dolittle/Documentation.git --all
         cd ..
