--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -1,3 +1,6 @@
+trigger:
+- master
+
 parameters:
   name: 'DotNetCore_Framework_Job'
   buildConfiguration: 'Release'
@@ -52,7 +55,10 @@ jobs:
       command: test
       projects: 'Specifications/**/*.csproj'
       arguments: '--configuration ${{ parameters.buildConfiguration }}'
-            
+      
+
+  - template: Source/Documentation/documentation.yml@templates
+  
   
 # echo PullRequest  49e27cc18f57870206171925a8c540abdac7bbfb 2.0.0
 # echo IndividualCI 036100265b6d83d536827451131bf8c306ce9d43 2.0.0
