--- a/Source/Documentation/documentation.yml
+++ b/Source/Documentation/documentation.yml
@@ -3,6 +3,7 @@ parameters:
   buildConfiguration: 'Release'
   pool: Default
 
+jobs:
 - job: ${{ parameters.name }}
   pool: ${{ parameters.pool }}
   variables:
