--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -53,42 +53,7 @@ jobs:
       projects: 'Specifications/**/*.csproj'
       arguments: '--configuration ${{ parameters.buildConfiguration }}'
       
-- job: Documentation
-  pool: ${{ parameters.pool }}
-  variables:
-  - group: global-var-pipelines
-  
-  steps:
-    - task: Bash@3
-      inputs:
-        arguments: $(Build.Repository.Uri)
-        targetType: inline
-      
-    - checkout: self
-      persistCredentials: true
-      clean: true
-    - bash: |
-        URL=$(Build.Repository.Uri)
-
-        submodule_name=`echo "$URL" | awk -F "dolittle-" '{ print $2 }'`
-        GIT_TERMINAL_PROMPT=1
-        mkdir tmp
-        cd tmp/
-        git clone https://github.com/dolittle/Documentation.git
-        cd Documentation/
-        cd Source/
-        cd repositories/
-        git submodule init && git submodule update "$submodule_name"
-        cd "$submodule_name"
-        git checkout master && git pull
-        cd ../../../..
-        git add Source/repositories/
-        git config --global user.email "documentation@dolittle.do"
-        git config --global user.name "Dolittle Documentation"
-        git commit -m "Updating Documentation"
-        git push https://dolittle-documentation:$(PAT)@github.com/dolittle/Documentation.git --all
-        cd ..
-        rm -rf Documentation/
+  - template: ../Documentation/documentation.yml
       
   
 # echo PullRequest  49e27cc18f57870206171925a8c540abdac7bbfb 2.0.0
