--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -2,7 +2,7 @@ parameters:
   name: 'DotNetCore_Framework_Job'
   buildConfiguration: 'Release'
   pool: Default
-  CASCADES: dolittle-runtime/Runtime
+  CASCADES: "dolittle-runtime/Runtime"
 
 jobs:
 - job: ${{ parameters.name }}
@@ -14,7 +14,7 @@ jobs:
       echo $BUILD_REASON $BUILD_SOURCEVERSION $VERSION
       echo "##vso[task.setvariable variable=VERSION]$VERSION"
 
-      echo "Cascade to:"
+      echo "Cascade to (update):"
       for item in ${CASCADES[*]}
       do
         printf "  %s\n" $item
