--- a/Source/Documentation/documentation.yml
+++ b/Source/Documentation/documentation.yml
@@ -3,34 +3,38 @@ parameters:
   buildConfiguration: 'Release'
   pool: Default
 
-steps:
-  - task: Bash@3
-    inputs:
-      arguments: $(Build.Repository.Uri)
-      targetType: inline
+jobs:
+- job : ${{ parameters.name }}
+  pool: ${{ parameters.pool }}
 
-  - checkout: self
-    persistCredentials: true
-    clean: true
-  - bash: |
-      URL=$(Build.Repository.Uri)
+  steps:
+    - task: Bash@3
+      inputs:
+        arguments: $(Build.Repository.Uri)
+        targetType: inline
 
-      submodule_name=`echo "$URL" | awk -F "dolittle-" '{ print $2 }'`
-      GIT_TERMINAL_PROMPT=1
-      mkdir tmp
-      cd tmp/
-      git clone https://github.com/dolittle/Documentation.git
-      cd Documentation/
-      cd Source/
-      cd repositories/
-      git submodule init && git submodule update "$submodule_name"
-      cd "$submodule_name"
-      git checkout master && git pull
-      cd ../../../..
-      git add Source/repositories/
-      git config --global user.email "documentation@dolittle.do"
-      git config --global user.name "Dolittle Documentation"
-      git commit -m "Updating Documentation"
-      git push https://dolittle-documentation:$(PAT)@github.com/dolittle/Documentation.git --all
-      cd ..
-      rm -rf Documentation/
+    - checkout: self
+      persistCredentials: true
+      clean: true
+    - bash: |
+        URL=$(Build.Repository.Uri)
+
+        submodule_name=`echo "$URL" | awk -F "dolittle-" '{ print $2 }'`
+        GIT_TERMINAL_PROMPT=1
+        mkdir tmp
+        cd tmp/
+        git clone https://github.com/dolittle/Documentation.git
+        cd Documentation/
+        cd Source/
+        cd repositories/
+        git submodule init && git submodule update "$submodule_name"
+        cd "$submodule_name"
+        git checkout master && git pull
+        cd ../../../..
+        git add Source/repositories/
+        git config --global user.email "documentation@dolittle.do"
+        git config --global user.name "Dolittle Documentation"
+        git commit -m "Updating Documentation"
+        git push https://dolittle-documentation:$(PAT)@github.com/dolittle/Documentation.git --all
+        cd ..
+        rm -rf Documentation/
