--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -15,7 +15,7 @@ jobs:
       echo "##vso[task.setvariable variable=VERSION]$VERSION"
 
       echo "Cascade to :"
-      for item in ${CASCADES[*]}
+      for item in ${{ parameters.CASCADES[*] }}
       do
         printf "  %s\n" $item
       done
