--- a/Source/Versioning/handle_version.yml
+++ b/Source/Versioning/handle_version.yml
@@ -14,17 +14,31 @@ jobs:
       TARGET="https://api.github.com/repos/$(REPO)/pulls\?state\=all"
       LABEL=$(GET $(TARGET) | tr ',' '\n' | grep labels | head -1 | cut -d ":" -f 2 | tr -d '[' | tr -d ']')
       VERSION=$(git tag --sort=-version:refname | head -1)
+      MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
+      MINOR=`echo $VERSION | awk -F "." '{print $2}'`
+      PATCH=`echo $VERSION | awk -F "." '{print $3}'`
       
       if [ "$LABEL" == "MAJOR" ]
   ##increase major and don't cascade
       then
-        
+        MAJOR=$((MAJOR+1))
+        MINOR="0"
+        PATCH="0"
       
       elif [ "$LABEL" == "MINOR" ]
-  ##increase minor
+  ##increase minor -> has to cascade
       then
+        MAJOR="0"
+        MINOR=$((MINOR+1))
+        PATCH="0"
       
       else
-  ##its a patch
+  ##its a patch -> has to cascade
+        MAJOR="0"
+        MINOR="0"
+        PATCH=$((PATCH+1))
       fi
+      
+      git tag -a "$MAJOR"."$MINOR"."$PATCH"
+      git push --tags
   ##to be continued
