--- a/Source/Versioning/handle_version.yml
+++ b/Source/Versioning/handle_version.yml
@@ -12,7 +12,7 @@ jobs:
       URL=$(Build.Repository.Uri)
       REPO=`echo "$URL" | awk -F ".com/" '{ print $2 }'`
       TARGET="https://api.github.com/repos/$(REPO)/pulls\?state\=all"
-      LABEL=$(GET $(TARGET) | tr ',' '\n' | grep labels | head -1 | cut -d ":" -f 2 | tr -d '[' | tr -d ']')
+      LABEL=`GET $(TARGET) | tr ',' '\n' | grep labels | head -1 | cut -d ":" -f 2 | tr -d '[' | tr -d ']'`
       VERSION=$(git tag --sort=-version:refname | head -1)
       MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
       MINOR=`echo $VERSION | awk -F "." '{print $2}'`
@@ -37,8 +37,10 @@ jobs:
         MAJOR="0"
         MINOR="0"
         PATCH=$((PATCH+1))
-      fi
+      fi"$MAJOR"."$MINOR"."$PATCH"
       
       git tag -a "$MAJOR"."$MINOR"."$PATCH"
+      echo "No longer in version $(VERSION)"
+      echo "New version : $(MAJOR).$(MINOR).$(PATCH)"
       git push --tags
   ##to be continued
