--- a/Source/Versioning/handle_version.yml
+++ b/Source/Versioning/handle_version.yml
@@ -44,3 +44,4 @@ jobs:
       echo "New version : $(MAJOR).$(MINOR).$(PATCH)"
       git push --tags
   ##to be continued
+    displayName: Update Version tag
