--- a/Source/Versioning/handle_version.yml
+++ b/Source/Versioning/handle_version.yml
@@ -2,6 +2,7 @@ parameters:
   name: 'Versioning'
   buildConfiguration: 'Release'
   pool: Default
+  CASCADES: ''
   
 jobs:
 - jobs: ${{ parameters.name }}
