--- a/Source/Versioning/handle_version.yml
+++ b/Source/Versioning/handle_version.yml
@@ -25,6 +25,7 @@ jobs:
         MAJOR=$((MAJOR+1))
         MINOR="0"
         PATCH="0"
+        parameters.CASCADES=NULL
       
       elif [ "$LABEL" == "MINOR" ]
   ##increase minor -> has to cascade
@@ -38,7 +39,7 @@ jobs:
         MAJOR="0"
         MINOR="0"
         PATCH=$((PATCH+1))
-      fi"$MAJOR"."$MINOR"."$PATCH"
+      fi
       
       git tag -a "$MAJOR"."$MINOR"."$PATCH"
       echo "No longer in version $(VERSION)"
