--- a/Source/Versioning/handle_version.yml
+++ b/Source/Versioning/handle_version.yml
@@ -49,5 +49,6 @@ jobs:
       echo "No longer in version $(VERSION)"
       echo "New version : $(MAJOR).$(MINOR).$(PATCH)"
       git push --tags
+      export VERSION=$(git tag --sort=-version:refname | head -1)
   ##to be continued
     displayName: Update Version tag
