--- a/Source/Versioning/handle_version.yml
+++ b/Source/Versioning/handle_version.yml
@@ -2,12 +2,7 @@ parameters:
   name: 'Versioning'
   buildConfiguration: 'Release'
   pool: Default
-  CASCADES: ''
-## To get the versioning label, please use this in the .yml calling this one and pass it in parameters
-##    URL=$(Build.Repository.Uri)
-##    REPO=`echo "$URL" | awk -F ".com/" '{ print $2 }'`
-##    LABEL=`GET https://api.github.com/repos/$REPO/pulls\?state\=all | tr ',' '\n' | grep labels | head -1 | cut -d ":" -f 2 | tr -d '[' | tr -d ']'`
-  LABEL: ''
+  CASCADES: ''  `
   
 jobs:
 - jobs: ${{ parameters.name }}
@@ -20,7 +15,9 @@ jobs:
         targetType: inline
   
   - bash: |
-      LABEL=${{ parameters.LABEL }}
+      URL=$(Build.Repository.Uri)
+      REPO=`echo "$URL" | awk -F ".com/" '{ print $2 }'`
+      LABEL=`GET https://api.github.com/repos/$REPO/pulls\?state\=all | tr ',' '\n' | grep labels | head -1 | cut -d ":" -f 2 | tr -d '[' | tr -d ']'
       VERSION=$(git tag --sort=-version:refname | head -1)
       MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
       MINOR=`echo $VERSION | awk -F "." '{print $2}'`
