--- a/Source/Versioning/handle_version.yml
+++ b/Source/Versioning/handle_version.yml
@@ -22,7 +22,9 @@ jobs:
       MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
       MINOR=`echo $VERSION | awk -F "." '{print $2}'`
       PATCH=`echo $VERSION | awk -F "." '{print $3}'`
-      
+      STATUS=`GET https://api.github.com/repos/$REPO/pulls\?state\=all | tr ',' '\n' | grep merged_at | head -1 | cut -d ":" -f 2 | tr -d '"'`
+if [ "$STATUS" != "null" ]
+then
       if [ "$LABEL" = "major" ]
   ##increase major and don't cascade
       then
@@ -43,9 +45,10 @@ jobs:
       fi
       
       git tag -a "$MAJOR"."$MINOR"."$PATCH" -m ""
-      echo "No longer in version $(VERSION)"
-      echo "New version : $(MAJOR).$(MINOR).$(PATCH)"
+      echo "No longer in version $VERSION"
+      echo "New version : $MAJOR.$MINOR.$PATCH"
 ##      git push --tags
+fi
       export VERSION=$(git tag --sort=-version:refname | head -1)
   ##to be continued
     displayName: Update Version tag
