--- a/Source/Versioning/handle_version.yml
+++ b/Source/Versioning/handle_version.yml
@@ -47,7 +47,7 @@ then
       git tag -a "$MAJOR"."$MINOR"."$PATCH" -m ""
       echo "No longer in version $VERSION"
       echo "New version : $MAJOR.$MINOR.$PATCH"
-##      git push --tags
+      git push --tags
 fi
       export VERSION=$(git tag --sort=-version:refname | head -1)
   ##to be continued
