--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -93,7 +93,7 @@ jobs:
         rm -rf Documentation/
         
 - job:
-  template
+  template: /Source/Versioning/handle_version.yml
         
   
 # echo PullRequest  49e27cc18f57870206171925a8c540abdac7bbfb 2.0.0
