--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -8,6 +8,7 @@ jobs:
 - job: ${{ parameters.name }}
   pool: ${{ parameters.pool }}
 
+  steps:
   - bash: |
       export VERSION=$(git tag --sort=-version:refname | head -1)
       echo $BUILD_REASON $BUILD_SOURCEVERSION $VERSION
