--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -8,7 +8,7 @@ jobs:
 - job: ${{ parameters.name }}
   pool: ${{ parameters.pool }}
 
-  #steps:
+  steps:
   #- template: ../Versioning/handle_version.yml
 
   - bash: |
