--- a/Source/Versioning/handle_version.yml
+++ b/Source/Versioning/handle_version.yml
@@ -14,29 +14,36 @@ steps:
       MINOR=`echo $VERSION | awk -F "." '{print $2}'`
       PATCH=`echo $VERSION | awk -F "." '{print $3}'`
       STATUS=`GET https://api.github.com/repos/$REPO/pulls\?state\=all | tr ',' '\n' | grep merged_at | head -1 | cut -d ":" -f 2 | tr -d '"'`
-      if [ "$STATUS" != "null" ]
-      then
-            if [ "$LABEL" = "major" ]
-            then
-              MAJOR=$((MAJOR+1))
-              MINOR="0"
-              PATCH="0"
-              parameters.CASCADES=NULL
+      echo $LABEL
+    if [ "$STATUS" != "null" ]
+    then
+        if [ "$LABEL" = "major" ]
+    ##increase major and don't cascade
+        then
+            MAJOR=$((MAJOR+1))
+            MINOR="0"
+            PATCH="0"
+            parameters.CASCADES=NULL
 
-            elif [ "$LABEL" = "minor" ]
-            then
-              MINOR=$((MINOR+1))
-              PATCH="0"
+        elif [ "$LABEL" = "minor" ]
+    ##increase minor -> has to cascade
+        then
+            MINOR=$((MINOR+1))
+            PATCH="0"
 
-            else
-              PATCH=$((PATCH+1))
-            fi
+        else
+    ##its a patch -> has to cascade
+            PATCH=$((PATCH+1))
+        fi
 
-            git tag -a "$MAJOR"."$MINOR"."$PATCH" -m ""
-            echo "No longer in version $VERSION"
-            echo "New version : $MAJOR.$MINOR.$PATCH"
-            git push --tags
-      fi
-      export VERSION=$(git tag --sort=-version:refname | head -1)
+        git tag -a "$MAJOR"."$MINOR"."$PATCH" -m ""
+        echo "No longer in version $VERSION"
+        echo "New version : $MAJOR.$MINOR.$PATCH"
+        git push --tags
+    else
+        echo "Pull request not merged yet"
+    fi
+          fi
+          export VERSION=$(git tag --sort=-version:refname | head -1)
   ##to be continued
     displayName: Update Version tag
