--- a/Source/DotNet/cascades.yml
+++ b/Source/DotNet/cascades.yml
@@ -3,6 +3,12 @@ parameters:
   buildConfiguration: 'Release'
   pool: Default
   CASCADES: ''
+  resources:
+  repositories:
+    - repository: templates
+      type: github
+      name: ${{ CASCADES }}
+      endpoint: dolittle-tools
 
 steps:
 - template: azure-pipelines.yml@templates
