--- a/Source/DotNet/cascades.yml
+++ b/Source/DotNet/cascades.yml
@@ -7,7 +7,7 @@ parameters:
     repositories:
       - repository: templates
         type: github
-        name: ${{ CASCADES }}
+        name: $CASCADES
         endpoint: dolittle-tools
 
 steps:
