--- a/Source/TypeScript/framework.yml
+++ b/Source/TypeScript/framework.yml
@@ -1,43 +1,57 @@
 parameters:
-  name: 'Typescript_Job'
   buildConfiguration: 'Release'
   pool: Default
   CASCADES: ''
 
-jobs:
-- job: ${{ parameters.name }}
-  pool: ${{ parameters.pool }}
+stages:
+- stage: Setup
+  jobs:
+  - job: Setup
+    pool: ${{ parameters.pool }}
+    steps:
+    - task: NodeTool@0
+      versionSpec: '12.0.0'
+      displayName: 'Ensuring version'
 
-  steps:
-  - bash: |
-      export VERSION=$(git tag --sort=-version:refname | head -1)
-      echo $BUILD_REASON $BUILD_SOURCEVERSION $VERSION
-      echo "##vso[task.setvariable variable=VERSION]$VERSION"
-
-      echo "Cascade to:"
-      for item in ${CASCADES[*]}
-      do
-        printf "  %s\n" $item
-      done
-    displayName: Set Version
-
-  - script: |
-      echo The version is $(VERSION)
-    displayName: Show version
-
-  - checkout: self
-    submodules: recursive
-
-  - task: NodeTool@0
-    versionSpec: '12.0.0'
-
-  - script: yarn
-    displayName: Install dependencies
-  - script: yarn build
-    displayName: Build Solution
-
-  - script: mocha test
+    - script: yarn
+      displayName: 'Installing dependencies'
+    
+- stage: Build
+  dependsOn: Setup
+  jobs:
+  - job: Build
+    pool: ${{ parameters.pool }}
+    steps:
+    - script: yarn build
+      displayName: 'Building the typescript project'
   
-  
-  
-  
+- stage: Test
+  dependsOn: Build
+  jobs:
+  - job: Test
+    pool: ${{ parameters.pool }}
+    steps:
+    - script: yarn test:run
+      displayName: 'Running tests'
+
+- stage: Versioning
+  dependsOn: Test
+  jobs:
+  - job: Versioning
+    pool: ${{ parameters.pool }}
+    steps:
+    - template: ../Versioning/handle_version.yml
+    - bash: |
+        export VERSION=$(git tag --sort=-version:refname | head -1)
+        echo $BUILD_REASON $BUILD_SOURCEVERSION $VERSION
+        echo "##vso[task.setvariable variable=VERSION]$VERSION"
+
+        echo "Cascade to :"
+        for item in ${{ parameters.CASCADES }}
+        do
+          printf "  %s\n" $item
+        done
+      displayName: Set Version
+    - script: |
+        echo The version is $(VERSION)
+      displayName: Show version
