--- a/Source/TypeScript/framework.yml
+++ b/Source/TypeScript/framework.yml
@@ -10,8 +10,10 @@ jobs:
   - task: NodeTool@0
     displayName: 'Ensuring version'
     inputs:
-      versionSpec: '12.0.0'
-
+      versionSpec: '>=12.0.0'
+  - task: Npm@1
+    inputs:
+      command: 'i yarn -g'  
   - script: yarn
     displayName: 'Installing dependencies'
   
