--- a/Source/TypeScript/framework.yml
+++ b/Source/TypeScript/framework.yml
@@ -11,9 +11,8 @@ jobs:
     displayName: 'Ensuring version'
     inputs:
       versionSpec: '>=12.0.0'
-  - task: Npm@1
-    inputs:
-      command: 'i yarn -g'  
+  - script: npm i yarn -g
+    displayName: 'Installing yarn'
   - script: yarn
     displayName: 'Installing dependencies'
   
