--- a/Source/DotNet/framework.yml
+++ b/Source/DotNet/framework.yml
@@ -9,19 +9,8 @@ jobs:
   pool: ${{ parameters.pool }}
 
   steps:
-  - bash: |
-      export VERSION=$(git tag --sort=-version:refname | head -1)
-      echo $BUILD_REASON $BUILD_SOURCEVERSION $VERSION
-      echo "##vso[task.setvariable variable=VERSION]$VERSION"
-
-      echo "Cascade to :"
-      for item in ${{ parameters.CASCADES }}
-      do
-        printf "  %s\n" $item
-      done
-    displayName: Building dependencies
-
   - script: |
+      export VERSION=$(git tag --sort=-version:refname | head -1)
       echo The version is $(VERSION)
     displayName: Show version
 
@@ -52,8 +41,7 @@ jobs:
       command: test
       projects: 'Specifications/**/*.csproj'
       arguments: '--configuration ${{ parameters.buildConfiguration }}'
-      
-# publish to local nuget
+     
 
 - job: 'Versioning'
   pool: Default
@@ -61,7 +49,11 @@ jobs:
   condition: succeeded()
   steps:
   - template: ../Versioning/handle_version.yml
-  
+ 
+
+# 1 -  publish to local nuget
+
+# 2 -  Cascade
  
 - job: 'Documentation'
   pool: Default
@@ -71,6 +63,7 @@ jobs:
   - group: global-var-pipelines
   steps:
   - template: ../Documentation/documentation.yml
-        
+   
+   
 # echo PullRequest  49e27cc18f57870206171925a8c540abdac7bbfb 2.0.0
 # echo IndividualCI 036100265b6d83d536827451131bf8c306ce9d43 2.0.0
