--- a/Source/TypeScript/framework.yml
+++ b/Source/TypeScript/framework.yml
@@ -26,5 +26,6 @@ jobs:
 
   - template: ../Versioning/handle_version.yml
   - script: |
+      export VERSION=$(git tag --sort=-version:refname | head -1)
       echo The version is $(VERSION)
     displayName: Show version
