--- a/Source/DotNet/cascades.yml
+++ b/Source/DotNet/cascades.yml
@@ -4,6 +4,7 @@ parameters:
   pool: Default
   CASCADES: ''
 
+steps:
   - publish: $(Build.ArtifactStagingDirectory)
     artifact: NugetPack  
     
