--- a/Source/DotNet/cascades.yml
+++ b/Source/DotNet/cascades.yml
@@ -53,7 +53,7 @@ steps:
     condition: succeeded()
     inputs:
       command: push
-      searchPatternPush: '$(Build.ArtifactStagingDirectory)/*.nupkg
+      searchPatternPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
       feedPublish: NugetPack
       
 # 1 - deploy nuget packages in a folder 
